# xju-feiyue

./: .gitignore  BACKEND_SPEC.md  CONTRIBUTING.md  Makefile  README.md  deploy.sh  feiyue.doc  feiyue.docx  ~$文档模板.doc  ~$考勤.docx  考勤.docx  赵文彪-飞跃.docx
backend/: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_init.py  0002_avatar_thumb.py  0003_login_events.py  0004_comment_anchor.py  0005_draft_summary.py  0007_preferred_name.py  0009_material_notice.py  0010_classes.py  0010_community_growth_collections.py  0011_committee_title.py  0012_class_missions.py  0013_drop_growth_checkin.py  0014_lab_member.py
backend/app/: deps.py  main.py  ratelimit.py  settings.py
backend/app/db/: base.py  conferences_engine.py  models.py  schools_engine.py  session.py
backend/app/routes/: admin.py  ai.py  auth.py  blocks.py  classes.py  collections.py  conferences.py  drafts.py  groups.py  interactions.py  materials.py  notes.py  reports.py  transcript.py  uploads.py
backend/app/schemas/: _base.py  admin.py  ai.py  classes.py  collection.py  conference.py  draft.py  group.py  interaction.py  material.py  note.py  report.py  uploads.py  user.py
backend/app/services/: ai_compose.py  auth.py  author_sync.py  blocks.py  class_export.py  classes.py  comments.py  conferences_crawler.py  conferences_query.py  diff.py  greeting.py  groups.py  moderation.py  notes.py  schools_pinyin.py  (+2 more)
backend/scripts/: add_user.py  backfill_avatar_thumbs.py  list_logged_in.py  reset_db.py  seed.py  sync_authors.py
(+639 files in other folders)
