[project]
name = "labnotes-backend"
version = "0.1.0"
description = "LabNotes API — FastAPI + Postgres + DeepSeek"
requires-python = ">=3.11"
readme = "README.md"

dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "sqlalchemy[asyncio]>=2.0",
  "asyncpg>=0.30",
  "alembic>=1.14",
  "pydantic>=2.9",
  "pydantic-settings>=2.6",
  "python-jose[cryptography]>=3.3",
  "bcrypt>=4.0",
  "openai>=1.50",
  "diff-match-patch>=20230430",
  "httpx>=0.27",
  "aiosqlite>=0.20",
  "pyyaml>=6",
]

[dependency-groups]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.24",
  "pytest-mock>=3.14",
  "ruff>=0.7",
  "mypy>=1.13",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py311"
[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["app/tests"]
